7902
Class {{DerivedScala}} extends the abstract class {{Abstract}}. I expected that the compiler flags an error on class {{DerivedScala}}, as its base class contains a deferred definition of a method, similarly to
{code}
scala> class A {def foo = 0 }
defined class A

scala> abstract class B extends A { def foo: Int }
defined class B

scala> class C extends B
<console>:9: error: class C needs to be abstract, since there is a deferred decl
aration of method foo in class B of type => Int which is not implemented in a su
bclass
       class C extends B
             ^
{code}
